Add JS control on form submit

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,8 @@
 
 en:
   trips:
+    new:
+      missing_field: "Select an option"
     index:
       iata_from: "your city"
       iata_to: "trip place"
